<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:text="常用查询工具"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@id/query_number_btn"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@color/peachpuff"
            android:gravity="center"
            android:text="@string/query_number"
            android:textColor="@color/blueviolet" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@id/query_weather_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_weight="1.0"
                android:background="@color/greenyellow"
                android:gravity="center"
                android:text="@string/query_weather"
                android:textColor="@color/blueviolet" />
            <View 
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/white"
                />

            <Button
                android:id="@id/query_identity_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_weight="1.0"
                android:background="@color/palegreen"
                android:gravity="center"
                android:text="@string/query_identity"
                android:textColor="@color/blueviolet" />
        </LinearLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
            android:id="@id/query_kuaidi_btn"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_weight="0.60"
            android:background="@color/whitesmoke"
            android:gravity="center"
            android:text="@string/query_kuaidi"
            android:textColor="@color/red" />
            <View 
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/white"
                />

            <Button
                android:id="@id/query_qqonline_btn"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_weight="0.40"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/query_qqonline"
                android:textColor="@color/whitesmoke" />
        </LinearLayout>

        
    </LinearLayout>

</RelativeLayout>