<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:text="身份证号码查询"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@id/identity_et"
            android:layout_width="250dp"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/query_hint3"
            android:maxLength="18"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@id/query_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/topbar_btn"
            android:text="@string/query" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/identiy_hint" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@id/query_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>