<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:text="天气查询"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@id/city_et"
            android:layout_width="250dp"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/query_hint2"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@id/query_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/topbar_btn"
            android:text="@string/query" />
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:orientation="vertical"
	    >
	    <TextView 
	        android:text="@string/city_hint"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        />
	    <TextView 
	        android:id="@+id/result_null"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="20dp"
	        android:visibility="gone"
	        />
	    
	</LinearLayout>
    <LinearLayout
        android:id="@+id/result_l"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/whitesmoke"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/today_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                 />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/today_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:id="@+id/today_wea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:id="@+id/today_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <TextView
                    android:id="@+id/today_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:background="@color/aliceblue"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/next_1_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/next_1_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/next_1_wea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/next_1_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:background="@color/blanchedalmond"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/next_2_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/next_2_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/next_2_wea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/next_2_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:background="@color/mintcream"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/next_3_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/next_3_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/next_3_wea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/next_3_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:background="@color/seaShell"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/next_4_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/next_4_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/next_4_wea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/next_4_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/about_1"
            />
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/about_2"
            />
    </LinearLayout>

</LinearLayout>